feat: add spectrogram processing and MM-Fi dataset integration

--- a/extras/visualize_ut_har.ipynb
+++ b/extras/visualize_ut_har.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ROOT = Path(\"Data/UT_HAR\") \n",
+    "ROOT = Path(\"C:/Users/Pojesh/Documents/GitHub/WiFi-HAR/UTHAR/UT_HAR/\") \n",
     "DATA   = ROOT / \"data\"\n",
     "LABEL  = ROOT / \"label\""
    ]
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "1f9f5e49",
    "metadata": {},
    "outputs": [
@@ -55,12 +55,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shapes →  train: (3977, 250, 90) (3977,)   val: (496, 250, 90)   test: (500, 250, 90)   labels: [0 1 2 3 4 5 6]\n"
+      "Shapes →  train: (3977, 250, 90) trainlabel:  (3977,)   val: (496, 250, 90)   test: (500, 250, 90)   labels: [0 1 2 3 4 5 6]\n"
      ]
     }
    ],
    "source": [
-    "print(\"Shapes →  train:\", X_train.shape, y_train.shape,\n",
+    "print(\"Shapes →  train:\", X_train.shape, \"trainlabel: \"  , y_train.shape,\n",
     "      \"  val:\", X_val.shape, \"  test:\", X_test.shape,\n",
     "      \"  labels:\", np.unique(y_train))"
    ]
@@ -91,7 +91,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
+   "id": "2aad737e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3977, 250, 90)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "dad7f23d",
    "metadata": {},
    "outputs": [
@@ -125,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "2d6a2d98",
    "metadata": {},
    "outputs": [],
@@ -146,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "c3bd9da9",
    "metadata": {},
    "outputs": [
@@ -198,8 +216,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "1cf2b08e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 ... 2 2 2]\n",
+      "(3977,)\n",
+      "[0 1 2 3 4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get subject labels from y train csv  numpy load\n",
+    "\n",
+    "ytt = np.load(LABEL / \"y_train.csv\")\n",
+    "print(ytt)\n",
+    "print(ytt.shape)\n",
+    "# print unique values\n",
+    "print(np.unique(ytt))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2db26007",
    "metadata": {},
    "outputs": [],
    "source": []
